[workspace]
resolver = "2"
members = [
  "comprehensive_grpc",
  "comprehensive_macros",
]

[package]
name = "comprehensive"
version = "0.3.0"
edition = "2021"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[dependencies]
arc-swap = { version = "1.7", optional = true }
async-trait = "0.1"
axum = "0.7"
axum-server = "0.7"
clap = { version = "4.5", features = ["derive"] }
comprehensive_macros = { path = "comprehensive_macros", version = "=0.3.0" }
downcast-rs = "1.2"
futures = "0.3"
http = "1.1"
hyper = "1.4"
log = "0.4"
prometheus = "0.13"
rustls-pemfile = { version = "2.1", optional = true }
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
tokio-rustls = { version = "0.26", optional = true }
tokio-stream = { version = "0.1", features = ["signal"] }

[features]
tls = ["axum-server/tls-rustls", "dep:arc-swap", "dep:tokio-rustls", "dep:rustls-pemfile"]
unreloadable_tls = []

[dev-dependencies]
rand = "0.8"
regex = "1.11"
reqwest = "0.12"
tempfile = "3"
tokio-stream = "0.1"
