[package]
name = "comprehensive"
version = "0.7.0"
edition = "2024"
rust-version = "1.86"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"
autoexamples = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
boxcar = "0.2"
clap = { version = "4.5", features = ["derive"] }
comprehensive_macros = { path = "../comprehensive_macros", version = "0.4.7" }
delegate = "0.13.3"
either = "1.15.0"
fixedbitset = "0.5.7"
futures = "0.3"
lazy_static = "1.5"
log = "0.4"
pin-project-lite = "0.2"
prometheus = "0.13"
rustls-pemfile = { version = "2.1", optional = true }
slice-dst = "1.6.0"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
tokio-stream = { version = "0.1", features = ["signal"] }
topological-sort = "0.2.2"
try-lock = "0.2"

[dev-dependencies]
atomic-take = "1.1"
regex = "1.11"
tokio-stream = "0.1"
