[package]
name = "comprehensive_dns"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A DNS resolver for https://crates.io/crates/comprehensive"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
comprehensive = { path = "../comprehensive", version = "0.8" }
hickory-resolver = { version = "0.25", features = ["system-config", "tokio"] }
