[package]
name = "comprehensive_grpc"
version = "0.5.1"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
atomic-take = "1.1"
clap = { version = "4.5", features = ["derive"] }
clap_builder = { version = "4.5", features = ["string"] }
comprehensive = { path = "..", version = "0.5.1" }
comprehensive_dns = { path = "../comprehensive_dns", version = "0.1" }
comprehensive_macros = { path = "../comprehensive_macros", version = "0.4.1" }
const_format = "0.2"
futures = "0.3"
http = "1.1"
humantime = "2.1"
log = "0.4"
prometheus = "0.13"
prost = "0.13"
prost-types = "0.13"
tokio = "1.40"
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tonic_prometheus_layer = "0.1"
tower = "0.5"
tower-layer = "0.3"
warm_channels = { version = "0.1", features = ["grpc", "metrics"] }

[features]
tls = ["comprehensive/tls", "comprehensive/unreloadable_tls", "tonic/tls", "warm_channels/tls"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
http-body-util = "0.1"
rand = "0.8"
test-log = "0.2"
tokio-rustls = "0.26"
tokio-stream = "0.1"
