[package]
name = "comprehensive_grpc"
version = "0.8.0"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
atomic-take = "1.1"
clap = { version = "4.5", features = ["derive"] }
clap_builder = { version = "4.5", features = ["string"] }
comprehensive = { path = "../comprehensive", version = "0.8" }
comprehensive_dns = { path = "../comprehensive_dns", version = "0.3" }
comprehensive_macros = { path = "../comprehensive_macros", version = "0.5" }
comprehensive_tls = { path = "../comprehensive_tls", version = "0.4", optional = true }
comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version = "0.4" }
futures = "0.3"
http = "1.1"
humantime = "2.1"
log = "0.4"
pin-project-lite = { version = "0.2", optional = true }
prometheus = "0.13"
prost = "0.13"
prost-types = "0.13"
thiserror = "2.0.12"
tokio = "1.40"
tokio-rustls = { version = "0.26", optional = true }
tokio-stream = "0.1"
tonic = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
tonic_prometheus_layer = "0.1"
tower = "0.5"
tower-layer = "0.3"
tower-service = "0.3.3"
warm_channels = { version = "0.2", features = ["grpc", "metrics"] }

[features]
experimental = []
tls = ["dep:comprehensive_tls", "dep:pin-project-lite", "dep:tokio-rustls", "tonic/tls", "warm_channels/tls"]

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
comprehensive_http = { path = "../comprehensive_http", version = "0.3" }
delegate = "0.13.3"
http-body-util = "0.1"
hyper-util = "0.1.14"
rand = "0.9"
rustls-pemfile = "2.1"
rustls-webpki = "0.103.3"
test-log = "0.2"
tokio-rustls = "0.26"
tokio-stream = "0.1"
