[package]
name = "comprehensive_grpc"
version = "0.9.1"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
atomic-take = "1.1"
bytes = "1.10.1"
clap = { version = "4.5", features = ["derive"] }
clap_builder = { version = "4.5", features = ["string"] }
comprehensive = { path = "../comprehensive", version = "0.9.1" }
comprehensive_dns = { path = "../comprehensive_dns", version = "0.4" }
comprehensive_macros = { path = "../comprehensive_macros", version = "0.5" }
comprehensive_tls = { path = "../comprehensive_tls", version = "0.5", optional = true }
comprehensive_warm_channels = { path = "../comprehensive_warm_channels", version = "0.5", features = ["grpc", "metrics"] }
futures = "0.3"
http = "1.1"
http-body = "1.0.1"
humantime = "2.1"
pin-project-lite = "0.2"
prometheus = "0.14.0"
prost = "0.14.1"
prost-types = "0.14.1"
thiserror = "2.0.12"
tokio = "1.40"
tokio-rustls = { version = "0.26", optional = true }
tokio-stream = "0.1"
tonic = "0.14.2"
tonic-health = "0.14.2"
tonic-prost = "0.14.2"
tonic-reflection = "0.14.2"
tower = "0.5"
tower-layer = "0.3"
tower-service = "0.3.3"
tracing = "0.1.41"

[features]
tls = ["dep:comprehensive_tls", "dep:tokio-rustls", "tonic/tls-aws-lc", "comprehensive_warm_channels/tls"]

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
comprehensive_http = { path = "../comprehensive_http", version = "0.4" }
delegate = "0.13.3"
http-body-util = "0.1"
hyper-util = "0.1.14"
rand = "0.9"
rustls-pemfile = "2.1"
rustls-webpki = "0.103.3"
test-log = "0.2"
tokio-rustls = "0.26"
tokio-stream = "0.1"
