[package]
name = "comprehensive_http"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"
autoexamples = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
axum = "0.8.7"
axum-server = "0.7"
clap = { version = "4.5", features = ["derive"] }
comprehensive = { path = "../comprehensive", version = "0.9" }
comprehensive_macros = { path = "../comprehensive_macros", version = "0.5" }
comprehensive_tls = { path = "../comprehensive_tls", version = "0.6", optional = true }
comprehensive_traits = { path = "../comprehensive_traits", version = "0.3", features = ["http_diag"] }
futures = "0.3"
http = "1.1"
hyper = "1.4"
pin-project-lite = "0.2.16"
prometheus = "0.14"
thiserror = "2.0.12"
tokio = { version = "1.40", features = ["macros", "rt-multi-thread", "signal"] }
tower-service = "0.3"
tracing = "0.1.41"

[features]
tls = ["axum-server/tls-rustls", "dep:comprehensive_tls"]

[dev-dependencies]
rand = "0.9"
reqwest = "0.12"
