[package]
name = "comprehensive_macros"
version = "0.4.8"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.7"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
comprehensive = { path = "../comprehensive", version = "0.7" }
comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.6" }
