[package]
name = "comprehensive_macros"
version = "0.5.0"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[lib]
proc-macro = true

[dependencies]
convert_case = "0.8"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["full"] }

[dev-dependencies]
# https://github.com/rust-lang/cargo/issues/4242
comprehensive = { path = "../comprehensive", version = "<0.10.0, >=0.7.4" }
comprehensive_grpc = { path = "../comprehensive_grpc", version = "<0.10.0, >=0.7.2" }
