[package]
name = "comprehensive_s3"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comprehensive = { path = "../comprehensive", version = "0.8" }
const_format = "0.2"
futures = "0.3"
gensym = "0.1"
log = "0.4"
rust-s3 = "0.37"
tokio = "1.40"
