[package]
name = "comprehensive_spiffe"
version = "0.3.1"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
backoff = "0.4.0"
clap = { version = "4.5", features = ["derive"] }
comprehensive = { path = "../comprehensive", version = "0.8" }
comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.8" }
comprehensive_tls = { path = "../comprehensive_tls", version = "0.4", default-features = false }
futures = "0.3"
html-escape = "0.2.13"
http = "1.3.1"
itertools = "0.14.0"
prost = "0.13"
prost-types = "0.13.5"
rustls-webpki = "0.103.3"
thiserror = "2.0.12"
time = "0.3.41"
tokio = { version = "1.40", features = ["time"] }
tonic = "0.12"
tracing = "0.1.41"

[build-dependencies]
tonic-build = "0.12"

[dev-dependencies]
hex-literal = "1.0.0"
tokio = "1.40"
