[package]
name = "comprehensive_tls"
version = "0.3.0"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
arc-swap = { version = "1.7", optional = true }
async-stream = { version = "0.3", optional = true }
axum-core = { version = "0.4", optional = true }
boxcar = { version = "0.2", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
comprehensive = { path = "../comprehensive", version = "0.7.1" }
comprehensive_traits = { path = "../comprehensive_traits", version = "0.2.0", optional = true }
futures = "0.3"
html-escape = { version = "0.2.13", optional = true }
http = "1.3.1"
log = "0.4"
pin-project-lite = { version = "0.2", optional = true }
rustls = "0.23"
rustls-pemfile = { version = "2.1", optional = true }
rustls-pki-types = "1.12"
rustls-webpki = { version = "0.103.3", optional = true }
slice-dst = { version = "1.6.0", optional = true }
thiserror = { version = "2.0.12", optional = true }
time = "0.3.41"
tokio = { version = "1.40", optional = true }
tower = {version = "0.5", optional = true }
tower-service = {version = "0.3", optional = true }
x509-parser = "0.17.0"

[features]
default = ["diag", "dispatch", "files"]
diag = ["comprehensive_traits/http_diag", "dep:async-stream", "dep:axum-core", "dep:clap", "dep:comprehensive_traits", "dep:tower", "dep:tower-service", "dispatch"]
dispatch = ["dep:arc-swap", "dep:boxcar", "dep:clap", "dep:pin-project-lite", "dep:slice-dst", "dep:thiserror"]
files = ["dep:async-stream", "dep:clap", "dep:html-escape", "dep:rustls-pemfile", "dep:rustls-webpki", "dep:thiserror", "dep:tokio"]

[dev-dependencies]
futures = "0.3"
rustls-pemfile = "2.1"
rustls-webpki = "0.103.3"
tempfile = "3"
tokio = { version = "1.40", features = ["io-util"] }
tokio-rustls = "0.26"
tokio-test = "0.4"
