[package]
name = "comprehensive_traits"
version = "0.1.2"
edition = "2024"
repository = "https://github.com/vandry/comprehensive.git"
homepage = "https://github.com/vandry/comprehensive"
description = "A harness for creating consistently-shaped servers will less boilerplate"
license = "MIT"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
atomicbox = { version = "0.4", optional = true }
axum-core = { version = "0.4", optional = true }
futures = { version = "0.3", optional = true }
http = { version = "1.1", optional = true }
rustls-pki-types = { version = "1.12", optional = true }
tower = { version = "0.5", optional = true }
try-lock = { version = "0.2", optional = true }

[features]
http_diag = ["dep:axum-core", "dep:http", "dep:tower", "tower/util"]
tls_config = ["dep:atomicbox", "dep:futures", "dep:rustls-pki-types", "dep:try-lock"]

[dev-dependencies]
comprehensive = { path = "../comprehensive", version = "0.7" }
