[package]
edition = "2024"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "helloworld-grpc-server"
path = "src/helloworld-grpc-server.rs"

[[bin]]
name = "helloworld-grpc-client"
path = "src/helloworld-grpc-client.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comprehensive = { path = "../comprehensive", version = "0.6.1" }
comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.6", features = ["tls"] }
comprehensive_http = { path = "../comprehensive_http", version = "0.1", features = ["tls"] }
env_logger = "0.10"
humantime = "2.1"
prost = "0.13"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tokio-rustls = "0.26"
tonic = "0.12"

[build-dependencies]
tonic-build = "0.12"
