[package]
edition = "2024"
license = "MIT"
name = "examples"
publish = false
version = "0.1.0"

[[bin]]
name = "helloworld-grpc-server"
path = "src/helloworld-grpc-server.rs"

[[bin]]
name = "helloworld-grpc-client"
path = "src/helloworld-grpc-client.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
comprehensive = { path = "../comprehensive", version = "0.9" }
comprehensive_grpc = { path = "../comprehensive_grpc", version = "0.9", features = ["tls"] }
comprehensive_http = { path = "../comprehensive_http", version = "0.4", features = ["tls"] }
comprehensive_spiffe = { path = "../comprehensive_spiffe", version = "0.4" }
humantime = "2.1"
prost = "0.14.1"
tokio = { version = "1.40", features = ["rt-multi-thread", "macros"] }
tokio-rustls = "0.26"
tonic = "0.14.2"
tonic-prost = "0.14.2"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[build-dependencies]
tonic-prost-build = "0.14.2"
